# Genius

./: CMakeLists.txt  README.md  genius.ui  help.ui  main-cli.cpp  main.cpp  mainOld.cpp
include/: Genius.h  GeniusWindow.h  Settings.h  WordleButton.h  WordleWord.h  WordlistLoader.h  ui_genius.h  ui_help.h  ui_settings.h
src/: Genius.cpp  GeniusWindow.cpp  Settings.cpp  WordleButton.cpp  WordleWord.cpp  WordlistLoader.cpp
ui/: genius.ui  settings.ui
